# 2025-11-19_FastAPI

./: README.md  main.py  pyproject.toml  pytest.ini
Frontend/: login_page.py  streamlit_app.py  tasks_page.py  users_page.py
Notebooki/: 1. Psycopg.ipynb  2. SQLAlchemy.ipynb  JupyterLab – instrukcja.ipynb  pydantic.ipynb  requestowanie_API.ipynb
Notebooki/Zadania/: 1. Psycopg - zadania.ipynb  2. SQLAlchemy  - zadania.ipynb
Zadania/: 1_FastAPI.md  2_CRUD.md  3_Pozostałe.md
src/: log.json
src/app/: main.py  middleware.py  models.py  oauth2.py  utils.py
src/app/routers/: auth.py  tasks.py  users.py
src/db/: models.py  orm.py  utils.py
src/db/sql/: tasks.sql  users.sql
src/tests/: test_delete_tasks.py  test_get_tasks.py  test_post_tasks.py  test_put_tasks.py
