[project]
name = "2025-11-19-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi>=0.121.2",
    "jupyterlab>=4.5.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.2.12",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
